fixed alignment in dashboard

--- a/client-app/src/app/suggestion/dashboard/dashboard.component.css
+++ b/client-app/src/app/suggestion/dashboard/dashboard.component.css
@@ -1,13 +1,9 @@
 .calendar {
     float: right;
-    width: 50%;
+    width: 40%;
+    height: 35%;
 }
 
 #infomation {
     float: left;
-}
-
-#dataview {
-    float: inline-end;
-    margin-top: 5%;
 }
